# abb_irb2400l_control

./: README.md
calibration/calibration_ws/: calibration_ws.code-workspace
calibration/calibration_ws/devel/: .catkin  setup.sh
calibration/calibration_ws/devel/include/abb2400_sim/: move_req.h  move_reqRequest.h  move_reqResponse.h
calibration/calibration_ws/devel/lib/abb2400_sim/: cameraCalib
calibration/calibration_ws/devel/lib/pkgconfig/: abb2400_sim.pc
calibration/calibration_ws/src/abbcmd/: CMakeLists.txt  TCR.txt  TCR_kinect1.txt  TCR_kinect2.txt  TRC.txt  TRC_kinect1.txt  TRC_kinect2.txt  ost.yaml  out_camera_calibration_kinect.yml  out_camera_calibration_kinect_nesto.yml  out_camera_calibration_kinect_petrin.yml  pCamCalib.txt  pRobotCalib.txt  sc.txt  workspace.txt  workspaceDMDSVS.txt  workspace_petra.txt
calibration/calibration_ws/src/abbcmd/include/: RMM.h  astraUtils.h
calibration/calibration_ws/src/abbcmd/launch/: aruco_detect.launch  run_camera_calib_astra.launch  run_camera_calib_kinect.launch  startAllNodes.launch
calibration/calibration_ws/src/abbcmd/lib/: .RMM.cpp.swp  RMM.cpp
calibration/calibration_ws/src/abbcmd/src/: .cameraCalib.cpp.swp  abbCmd.py  aruco_simple.cpp  cameraCalib.cpp  endlessMove.py  moveit_service.py  out_camera_calibration.yml  poseNode.py  testNode.py
calibration/calibration_ws/src/abbcmd/srv/: move_req.srv
cartesio_control_ws/devel/: .catkin  .rosinstall  _setup_util.py
cartesio_control_ws/devel/lib/pkgconfig/: cartesio_irb2400.pc
cartesio_control_ws/devel/share/cartesio_irb2400/cmake/: cartesio_irb2400Config.cmake
cartesio_control_ws/src/cartesio_irb2400/: CMakeLists.txt
cartesio_control_ws/src/cartesio_irb2400/configs/: irb2400_stack.yaml
cartesio_control_ws/src/cartesio_irb2400/launch/: irb2400.launch
cartesio_control_ws/src/cartesio_irb2400/rviz/: disp.rviz
cartesio_control_ws/src/cartesio_irb2400/src/: ros_client_example.py
cartesio_control_ws/src/cartesio_irb2400/srdf/: abb_irb2400.srdf  abb_irb2400_old.srdf
cartesio_control_ws/src/cartesio_irb2400/urdf/: abb_irb2400.urdf  abb_irb2400_old.urdf
catkin_abb_ws/devel/: .catkin  .rosinstall
catkin_abb_ws/devel/lib/abb_driver/: motion_download_interface  robot_state
catkin_abb_ws/devel/lib/pkgconfig/: abb_driver.pc  abb_irb2400_moveit_config.pc  abb_irb2400_moveit_plugins.pc  abb_irb2400_support.pc  abb_resources.pc
catkin_abb_ws/devel/share/abb_driver/cmake/: abb_driverConfig.cmake
catkin_abb_ws/devel/share/abb_irb2400_moveit_config/cmake/: abb_irb2400_moveit_configConfig.cmake
catkin_abb_ws/devel/share/abb_irb2400_moveit_plugins/cmake/: abb_irb2400_moveit_pluginsConfig.cmake
catkin_abb_ws/devel/share/abb_irb2400_support/cmake/: abb_irb2400_supportConfig.cmake
catkin_abb_ws/devel/share/abb_resources/cmake/: abb_resourcesConfig.cmake
catkin_abb_ws/src/abb_driver/rapid/: ROS_motion.mod
catkin_abb_ws/src/abb_driver/src/rapid/: ROS_socket.sys
catkin_abb_ws/src/abb_irb2400_moveit_config/config/: abb_irb2400.srdf
catkin_abb_ws/src/abb_irb2400_moveit_config/launch/: move_group.launch  moveit.rviz  moveit_planning_execution.launch  trajectory_execution.launch.xml
catkin_abb_ws/src/abb_irb2400_moveit_plugins/irb2400_kinematics/src/: abb_irb2400_manipulator_ikfast_moveit_plugin.cpp  abb_irb2400_manipulator_ikfast_solver.cpp
catkin_abb_ws/src/abb_irb2400_support/urdf/: irb2400.urdf
robot_control_ws/: robctrl.cpp  robot_control_ws.code-workspace
robot_control_ws/devel/: .rosinstall  _setup_util.py
robot_control_ws/devel/include/testing_msgs/: AngleRotation.h  OperatorDistance.h  OperatorSpeed.h
robot_control_ws/devel/lib/abb_irb2400_test/: abb_irb2400_test_random_node
robot_control_ws/devel/lib/pkgconfig/: abb_irb2400_test.pc  irb2400_control.pc  new_dataset_testing.pc  testing_msgs.pc
robot_control_ws/devel/share/abb_irb2400_test/cmake/: abb_irb2400_testConfig.cmake
robot_control_ws/devel/share/irb2400_control/cmake/: irb2400_controlConfig.cmake
robot_control_ws/devel/share/new_dataset_testing/cmake/: new_dataset_testingConfig.cmake
robot_control_ws/src/abb_irb2400_test/: CMakeLists.txt  package.xml
robot_control_ws/src/abb_irb2400_test/include/abb_irb2400_test/: robotcontrol.hpp
robot_control_ws/src/abb_irb2400_test/launch/: run_custom_test.launch  run_everything.launch  run_everything_test.launch
robot_control_ws/src/abb_irb2400_test/src/: robotcontrol.cpp  robotcontrol_node.cpp  robotcontrol_node_test.cpp  test_custom.cpp  test_custom_prev.txt  test_random.cpp
robot_control_ws/src/irb2400_control/: CMakeLists.txt
robot_control_ws/src/irb2400_control/include/irb2400_control/: robotcontrol.hpp
robot_control_ws/src/irb2400_control/launch/: run_RobotControl_node.launch  run_custom_test.launch  test_conditions.launch
robot_control_ws/src/irb2400_control/src/: robotcontrol.cpp  robotcontrol_node.cpp
robot_control_ws/src/new_dataset_testing/: CMakeLists.txt  detect_aruco_command.txt
robot_control_ws/src/new_dataset_testing/launch/: mulitple_kinects_record.launch  mulitple_kinects_record_ptcloud.launch  multiple_kinects.launch  record_bag.launch
robot_control_ws/src/new_dataset_testing/scripts/: listener_detector.py  listener_distance.py  listener_frames.py  listener_rotation.py  listener_speed_node.py
robot_control_ws/src/testing_msgs/: CMakeLists.txt  package.xml
robot_control_ws/src/testing_msgs/msg/: AngleRotation.msg  OperatorDistance.msg  OperatorSpeed.msg
(+58 files in other folders)
